--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <select id="theme">
                             <option value="light" selected>Light</option>
                             <option value="dark">Dark</option>
+                            <option value="dark-yellow">Dark Yellow</option>
                         </select>
                     </li>
                     <li>
