--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metrônome</title>
     <link href="./css/styles.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
 </head>
 <body>
     <header>
