Corrigido bug de alternancia entre measures e minutes.

--- a/index.html
+++ b/index.html
@@ -106,15 +106,11 @@
                         </li>
                         <li>
                             <label>Measures:</label>
-                            <select id="measures-to-play">
-                                <option value="">0</option>
-                            </select>
+                            <select id="measures-to-play"></select>
                         </li>
                         <li>
                             <label>Minutes:</label>
-                            <select id="minutes-to-play">
-                                <option value="">0</option>
-                            </select>
+                            <select id="minutes-to-play"></select>
                         </li>
                     </ul>
                     <input id="bpm" type="range" min="30" max="280" value="120">
